Dot product not working

--- a/tests/performance/Makefile
+++ b/tests/performance/Makefile
@@ -17,11 +17,15 @@ include ../../Makefile.common
 TEST_DIR=$(BASE_DIR)/../tests
 LIBS_DIR=$(BASE_DIR)
 
-all: conjugate_gradient
+all: conjugate_gradient multi_dot
 
 .PHONY: clean
 
 conjugate_gradient: conjugate_gradient.cpp conjugate_gradient.ci
+	$(CHARMC) -E $(word 2,$^)
+	$(CHARMC) $< -L$(LIBS_DIR)/aum -laum -I$(BASE_DIR) -I$(BASE_DIR)/aum/backend -o $@.out $(OPTS)
+
+multi_dot: multi_dot.cpp multi_dot.ci
 	$(CHARMC) -E $(word 2,$^)
 	$(CHARMC) $< -L$(LIBS_DIR)/aum -laum -I$(BASE_DIR) -I$(BASE_DIR)/aum/backend -o $@.out $(OPTS)
 
